--- a/index.css
+++ b/index.css
@@ -18,9 +18,10 @@ body{
 
     /*Text Styling */
     text-align: center;
+    color: white;
 
     /*background style */
-    background-image: url(borabora.jpeg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(borabora.jpeg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -48,7 +49,8 @@ body{
    color:black;
    text-decoration: none;
    font-size: 1.5em;
-   border: 3px solid black;
+   border: 3px solid white;
    border-radius: 20px;
+   background-color: rgba(147, 112, 219, 0.8);
 
 }
