--- a/index.css
+++ b/index.css
@@ -46,11 +46,12 @@ body{
     margin-right:auto;
    
    /* Text and Border Syles */
-   color:black;
+   color:white;
    text-decoration: none;
    font-size: 1.5em;
    border: 3px solid white;
    border-radius: 20px;
-   background-color: rgba(147, 112, 219, 0.8);
+   background-color: rgba(29, 168, 150, 0.534);
 
 }
+
