Added signup.html and signup.css

--- a/index.css
+++ b/index.css
@@ -55,3 +55,17 @@ body{
 
 }
 
+.Tours h2 {
+    display:block;
+    color: black;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.Tours .display-7{
+    font-size: larger;
+    font-weight: bold;
+    color: black;
+    
+}
